Fixed the gap in userprofile dropdown

--- a/client/src/components/Navbar/navbar.scss
+++ b/client/src/components/Navbar/navbar.scss
@@ -350,7 +350,7 @@
     .user-menu-item {
       display: flex;
       align-items: center;
-      padding: 20px;
+      padding: 15px 20px;
 
       &:hover {
         background-color: var(--second-bg);
